# tutel

./: .gitignore  .tutel  .tutel.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs
aur/: PKGBUILD
res/: tutel-completions.bash  tutel-completions.elv  tutel-completions.fish  tutel-completions.zsh
src/: app.rs  data.rs  de.rs  lib.rs  main.rs  nav.rs  project.rs  ser.rs
src/data/: de.rs  mod.rs  ser.rs
src/shells/: bash.sh  fish.fish
