[package]
name = "tutel"
version = "0.2.5"
edition = "2018"
description = "a minimalist todo app for terminal enthusiasts"
authors = ["arthur"]
homepage = "https://www.github.com/InvalidName662/tutel"
repository = "https://www.github.com/InvalidName662/tutel"
license = "MIT"

[lib]
name = "tutel"
path = "src/lib.rs"

[[bin]]
name = "tutel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.45"
bpaf = "0.4.9"
toml = "0.5.8"
ansi_term = "0.12.1"
serde = "1.0.130"
tempfile = "3.3.0"
