[package]
name = "tutel"
version = "0.2.7"
edition = "2018"
description = "a minimalistic todo app for terminal enthusiasts"
authors = ["Arthur Wienstroer"]
homepage = "https://www.github.com/0x5a4/tutel"
repository = "https://www.github.com/0x5a4/tutel"
license = "MIT"
categories = ["command-line-utilities"]

[lib]
name = "tutel"
path = "src/lib.rs"

[[bin]]
name = "tutel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.45"
bpaf = { version = "0.6.0", features = ["autocomplete"] }
toml = "0.5.8"
serde = "1.0.130"
tempfile = "3.3.0"
colored = "2.0.0"
